--- a/src/app/landing-page/login/login.component.html
+++ b/src/app/landing-page/login/login.component.html
@@ -35,4 +35,19 @@
       Gäste-Login
     </button>
   </div>
+
+  <div class="logo">
+    <img src="assets/img/logo.webp" alt="" />
+    <img src="assets/img/logo_name.webp" alt="" />
+  </div>
+
+  <div class="register-link">
+    <p>Neu bei DABubble?</p>
+    <a class="link" [routerLink]="['/register']">Konto erstellen</a>
+  </div>
+
+  <div class="info-links">
+    <a class="link" [routerLink]="['/impressum']">Impressum</a>
+    <a class="link" [routerLink]="['/datenschutz']">Datenschutz</a>
+  </div>
 </div>
