add checkbox in register-component + optimize design + create new component "select-avatar"

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@
 }
 
 ::ng-deep app-login,
-app-register {
+::ng-deep app-register {
   display: flex;
   justify-content: center;
   align-items: center;
