--- a/src/app/landing-page/register/register.component.scss
+++ b/src/app/landing-page/register/register.component.scss
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
+  height: 100%;
 
   mat-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
-
-    width: 45%;
 
     text-align: center;
 
@@ -21,24 +21,28 @@
 
     box-shadow: 0px 2px 10px 0px #00000014;
 
-    .back-icon {
-      cursor: pointer;
-      position: absolute;
-      top: 45px;
-      left: 32px;
-      color: var(--black-color);
-      font-size: 24px;
-      padding: 8px;
+    .headline {
+      gap: var(--gap-20);
+      width: 100%;
+      display: flex;
+      align-items: center;
+      .back-icon {
+        cursor: pointer;
+        color: var(--black-color);
+        font-size: 24px;
 
-      &:hover {
-        background-color: var(--bg-color);
-        border-radius: 100px;
-        color: var(--purple3-color);
+        &:hover {
+          background-color: var(--bg-color);
+          border-radius: 100px;
+          color: var(--purple3-color);
+        }
       }
-    }
 
-    h1 {
-      color: var(--purple1-color);
+      h1 {
+        width: 100%;
+        text-wrap: nowrap;
+        color: var(--purple1-color);
+      }
     }
 
     p {
@@ -100,11 +104,10 @@
       }
     }
 
-    .buttons {
+    .next-button {
       width: 100%;
       display: flex;
-      justify-content: center;
-      gap: var(--gap-30);
+      justify-content: end;
     }
   }
 }
