Side nav overflow behaviour

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -60,4 +60,8 @@
   padding: 32px;
   color: black;
   background-color: white;
+
+  ::ng-deep.mat-drawer-inner-container {
+    overflow: hidden !important;
+  }
 }
