--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,28 @@
   --transition-100: 100ms ease-in-out;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px var(--grey-color);
+  border-radius: 6px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--purple2-color);
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--purple3-color);
+}
+
 * {
   margin: 0;
   padding: 0;
