Combining Side-nav with main page

--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -10,7 +10,7 @@
   <div class="profile" (click)="toggleDropdown()">
     <p>Frederik Beck</p>
     <div class="image-with-badge">
-      <img src="./assets/img/frederik-beck.png" alt="" />
+      <img src="./assets/img/profile/frederik.webp" alt="" />
       <div class="badge"></div>
     </div>
     <mat-icon>keyboard_arrow_down</mat-icon>
