--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -63,56 +63,56 @@
       </mat-expansion-panel-header>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/frederik.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Frederick Beck (Du)</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/sofia.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Sofia Müller</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/noah.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Noah Braun</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/elise.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Elise Roth</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/elias.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Elias Neumann</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/steffen.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Steffen Hoffmann</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/steffen.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Steffen Hoffmann</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/frederik-beck.png" alt="" />
+          <img src="./assets/img/profile/steffen.webp" alt="" />
           <div class="badge"></div>
         </div>
         <p class="name">Steffen Hoffmann</p>
