--- a/src/app/main/side-nav/side-nav.component.scss
+++ b/src/app/main/side-nav/side-nav.component.scss
@@ -141,4 +141,5 @@
 .mat-toolbar-single-row {
   background-color: white !important;
   margin-bottom: 16px !important;
+  box-shadow: none !important;
 }
