--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -3,6 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   background-color: var(--bg-color);
+  margin-bottom: 20px;
 
   .logo {
     display: flex;
