--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .sidenav-button-container {
   position: fixed;
   left: -102px;
@@ -49,16 +48,14 @@
 
 .example-container {
   height: calc(100vh - 145px);
-  width: 366px;
   background-color: unset;
   z-index: 1;
   border-radius: 30px;
-  margin-left: 15px;
 }
 
 .example-sidenav {
   width: 102%;
-  padding: 32px;
+  padding: 24px;
   color: black;
   background-color: white;
 
@@ -66,17 +63,17 @@
     overflow: hidden !important;
   }
 }
-=======
 section {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    gap: 20px;
+  display: flex;
+  // flex-direction: column;
+  height: calc(100vh - 145px);
+  // height: 100%;
+  width: 100%;
+  // gap: 20px;
 }
 
 app-main-message-area {
-    display: flex;
-    flex-grow: 1;
+  display: flex;
+  flex-grow: 1;
+  // width: 100%;
 }
->>>>>>> origin/main
