--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.html
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.html
@@ -20,7 +20,7 @@
           fill="currentColor"
         />
       </svg>
-      <mat-icon class="material-symbols-outline">tag</mat-icon>
+      <!-- <mat-icon class="material-symbols-outline">tag</mat-icon> -->
       Entwicklerteam
       <mat-icon>keyboard_arrow_down</mat-icon>
     </button>
