--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -1,5 +1,14 @@
 <section>
-    <div class="input-primary">
-        <input type="text" placeholder="Nachricht an #Entwicklerteam"/>
+  <div class="textarea-container">
+    <textarea placeholder="Nachricht an #Entwicklerteam" id=""></textarea>
+    <div class="icons-container">
+      <div class="left-icons">
+        <mat-icon class="material-symbols-outlined">add</mat-icon>
+        <div class="grey-line"></div>
+        <mat-icon class="material-symbols-outlined">sentiment_satisfied</mat-icon>
+        <mat-icon class="material-symbols-outlined">alternate_email</mat-icon>
+      </div>
+      <mat-icon>send</mat-icon>
     </div>
+  </div>
 </section>
