--- a/src/app/main/main-message-area/thread/thread.component.html
+++ b/src/app/main/main-message-area/thread/thread.component.html
@@ -1,3 +1,5 @@
 <section>
-    
+    <app-thread-header></app-thread-header>
+    <p>message-history</p>
+    <app-message-area-new-message></app-message-area-new-message>
 </section>
