--- a/src/app/main/main-message-area/main-message-area.component.scss
+++ b/src/app/main/main-message-area/main-message-area.component.scss
@@ -1,9 +1,12 @@
 section {
-  width: 100%;
-  height: 100%;
+  flex-grow: 1;
   align-items: flex-start;
   justify-content: flex-start;
   display: flex;
+}
+
+.padding-right-20 {
+  padding-right: var(--padding-20);
 }
 
 app-message-area-header {
@@ -19,7 +22,6 @@ app-message-area-chat-history {
 
 app-message-area-new-message {
   width: 100%;
-  height: 10svh !important;
   display: flex;
 }
 
@@ -44,4 +46,22 @@ mat-card-content {
   &:last-child {
     padding: 0;
   }
+}
+
+mat-sidenav-container {
+  border-radius: 30px;
+  right: auto;
+  left: 0px;
+}
+
+mat-sidenav {
+  width: 400px;
+  background-color: var(--text-color);
+  box-shadow: 0px 2px 2px 0px #00000014;
+}
+
+mat-sidenav-content {
+  height: 100%;
+  width: 0;
+  border-radius: 30px;
 }
