--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.scss
@@ -1,7 +1,7 @@
 section {
   color: black;
   font-family: var(--font-nunito);
-  width: 100%;
+  width: 480px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -37,110 +37,8 @@ h2 {
   }
 }
 
-.edit-channel-name-container {
-  display: flex;
+app-channel-display-name, app-channel-edit-name, app-channel-display-description, app-channel-edit-description {
   width: 100%;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: column;
-  padding: 20px;
-  border: 1px solid var(--light-purple-color);
-  border-radius: 20px;
-  min-height: 115px;
-
-  span:first-of-type {
-    font-size: 18px;
-    font-weight: 700;
-  }
-
-  button {
-    color: var(--purple3-color) !important;
-    border: none;
-    background-color: unset;
-    font-size: 18px;
-    font-weight: 400 !important;
-
-    &:hover {
-      cursor: pointer;
-      font-weight: 600 !important;
-      color: var(--purple1-color) !important;
-    }
-  }
-}
-
-.channel-name-in-edit {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
-  font-weight: 400 !important;
-
-  svg {
-    width: 16px;
-    height: 16px;
-  }
-}
-
-.description-container {
-  width: 100%;
-  min-height: 275px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  border: 1px solid var(--light-purple-color);
-  border-radius: 20px;
-  padding: 20px;
-}
-
-.description-container-headline {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-
-  span {
-    font-size: 18px;
-    font-weight: 700;
-  }
-
-  button {
-    color: var(--purple3-color) !important;
-    border: none;
-    background-color: unset;
-    font-size: 18px;
-    font-weight: 400 !important;
-
-    &:hover {
-      cursor: pointer;
-      font-weight: 600 !important;
-      color: var(--purple1-color) !important;
-    }
-  }
-}
-
-.blue-line {
-  width: 95%;
-  height: 1px;
-  background-color: var(--light-purple-color);
-}
-
-.created-by-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-
-  span:first-of-type {
-    font-weight: 700 !important;
-  }
-
-  span:last-of-type {
-    font-weight: 400 !important;
-    font-size: 24px !important;
-    color: var(--purple3-color) !important;
-  }
 }
 
 .leave-channel-container {
