--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -49,7 +49,7 @@ mat-toolbar {
   border-radius: 0px 30px 30px 30px;
   box-shadow: 0px 6px 10px 0px #00000033;
   padding: 0;
-  max-width: 50vw;
+  max-width: unset;
 }
 
 #mat-menu-panel-1,
@@ -57,7 +57,7 @@ mat-toolbar {
   border-radius: 30px 0px 30px 30px;
   box-shadow: 0px 6px 10px 0px #00000033;
   padding: 10px 20px;
-  max-width: 50vw;
+  max-width: unset;
 }
 
 .cdk-overlay-container {
