--- a/src/app/landing-page/login/reset-password/reset-password.component.scss
+++ b/src/app/landing-page/login/reset-password/reset-password.component.scss
@@ -57,10 +57,10 @@
   }
 }
 
-.logo {
+.logo-container {
   position: absolute;
-  top: 50px;
-  left: 55px;
+  top: 75px;
+  left: 75px;
   display: flex;
   align-items: center;
   gap: var(--gap-16);
@@ -69,8 +69,12 @@
     height: 70px;
   }
 
-  img:last-child {
-    height: 24px;
+  .logo-name {
+    position: relative;
+    font-size: 34px;
+    color: var(--black-color);
+    font-weight: bold;
+    letter-spacing: -2px;
   }
 }
 
