--- a/src/app/landing-page/register/register.component.html
+++ b/src/app/landing-page/register/register.component.html
@@ -62,9 +62,18 @@
     </div>
   </mat-card>
 
-  <div class="logo">
+  <div class="logo-container">
     <img src="assets/img/logo.webp" alt="" />
-    <img src="assets/img/logo_name.webp" alt="" />
+    <div class="logo-name">
+      <span class="letter letter-1">D</span>
+      <span class="letter letter-2">A</span>
+      <span class="letter letter-3">B</span>
+      <span class="letter letter-4">u</span>
+      <span class="letter letter-5">b</span>
+      <span class="letter letter-6">b</span>
+      <span class="letter letter-7">l</span>
+      <span class="letter letter-8">e</span>
+    </div>
   </div>
 
   <div class="info-links">
