--- a/src/app/landing-page/register/select-avatar/select-avatar.component.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.scss
@@ -125,10 +125,10 @@
     }
   }
 
-  .logo {
+  .logo-container {
     position: absolute;
-    top: 50px;
-    left: 55px;
+    top: 75px;
+    left: 75px;
     display: flex;
     align-items: center;
     gap: var(--gap-16);
@@ -137,8 +137,12 @@
       height: 70px;
     }
 
-    img:last-child {
-      height: 24px;
+    .logo-name {
+      position: relative;
+      font-size: 34px;
+      color: var(--black-color);
+      font-weight: bold;
+      letter-spacing: -2px;
     }
   }
 
