Own profile hardcoded

--- a/src/app/main/header/profile-dialog/profile-dialog.component.html
+++ b/src/app/main/header/profile-dialog/profile-dialog.component.html
@@ -1,4 +1,9 @@
 <mat-card class="card" appearance="outlined">
-  <button class="button-secondary profile-dialog-button">Profil</button>
+  <button
+    class="button-secondary profile-dialog-button"
+    (click)="openProfileInfo()"
+  >
+    Profil
+  </button>
   <button class="button-secondary profile-dialog-button">Log out</button>
 </mat-card>
