--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
   --error-color: #ed1e79;
   --online-color: #92c83e;
   --transparent-color: rgba(255, 255, 255, 0);
+  --blue-color: #1381ff;
 
   --padding-16: 16px;
   --padding-20: 20px;
